# esp-hid-hub

./: README.md  sdkconfig
main/: CMakeLists.txt  htu31d.h  i2c_accessories.c  i2c_accessories.h  idf_component.yml  lato_60.c  lvgl_control.c  lvgl_control.h  lvgl_demo_ui.c  lvgl_demo_ui.h  main.c  neokey_4x1.c  neokey_4x1.h  pins.h  seesaw.c  seesaw.h  shared.h  stemma_encoder.c  stemma_encoder.h  usb.c  usb.h
main/i2c/: htu31d.c  neokey_4x1.c  neokey_4x1.h  seesaw.c  seesaw.h
