idf_component_register(SRCS 
                    "./i2c/neokey_4x1.c"
                    "main.c"
                    "lvgl_demo_ui.c"
                    "i2c/seesaw.c"
                    "i2c/htu31d.c"
                    "i2c/neokey_4x1.c"
                    "usb.c"
                    "i2c/stemma_encoder.c"
                    "lato_60.c"
                    "i2c_accessories.c"
                    "lvgl_control.c"
                    INCLUDE_DIRS ".")